# atomic-memcpy

./: .cspell.json  .deny.toml  .git-blame-ignore-revs  .gitattributes  CHANGELOG.md  Cargo.toml  README.md
bench/: Cargo.toml  bench.rs
bench/benches/: atomic_memcpy.rs
src/: lib.rs  (+1 more)
tests/asm-test/: Cargo.toml
tests/asm-test/asm/: aarch64.asm  armv5te.asm  armv6.asm  armv6hf.asm  armv7.asm  armv7hf.asm  i586.asm  i686.asm  loongarch64.asm  powerpc.asm  powerpc64.asm  powerpc64le.asm  riscv32i.asm  riscv32imac.asm  riscv64a23.asm  riscv64gc.asm  s390x.asm  sparc64.asm  thumbv7neon.asm  x86_64.asm  x86_64_x32.asm
tests/asm-test/asm/aarch64-unknown-linux-gnu/: atomic_memcpy_load_align1  atomic_memcpy_load_align16  atomic_memcpy_load_align2  atomic_memcpy_load_align4  atomic_memcpy_load_align8  atomic_memcpy_store_align1  atomic_memcpy_store_align16  atomic_memcpy_store_align2  atomic_memcpy_store_align4  atomic_memcpy_store_align8  atomic_u128_load  atomic_u16_load  atomic_u32_load  atomic_u64_load  atomic_u8_load
tests/asm-test/asm/arm-unknown-linux-gnueabi/: atomic_memcpy_load_align1  atomic_memcpy_load_align16  atomic_memcpy_load_align2  atomic_memcpy_load_align4  atomic_memcpy_load_align8  atomic_memcpy_store_align1  atomic_memcpy_store_align2  atomic_memcpy_store_align4  atomic_memcpy_store_align8  atomic_u16_load  atomic_u32_load  atomic_u64_load  atomic_u8_load
tests/asm-test/asm/arm-unknown-linux-gnueabihf/: atomic_memcpy_load_align1  atomic_memcpy_load_align16  atomic_memcpy_load_align2  atomic_memcpy_load_align4  atomic_memcpy_load_align8  atomic_memcpy_store_align1  atomic_memcpy_store_align16  atomic_memcpy_store_align2  atomic_memcpy_store_align4  atomic_u16_load  atomic_u32_load  atomic_u8_load
tests/asm-test/asm/armv5te-unknown-linux-gnueabi/: atomic_memcpy_load_align1  atomic_memcpy_load_align16  atomic_memcpy_load_align2  atomic_memcpy_load_align4  atomic_memcpy_load_align8  atomic_memcpy_store_align1  atomic_memcpy_store_align16  atomic_memcpy_store_align2  atomic_memcpy_store_align4  atomic_memcpy_store_align8  atomic_u16_load  atomic_u32_load  atomic_u8_load
tests/asm-test/asm/armv7-unknown-linux-gnueabi/: atomic_memcpy_load_align1  atomic_memcpy_load_align16  atomic_memcpy_load_align2  atomic_memcpy_load_align4  atomic_memcpy_load_align8  atomic_memcpy_store_align1  atomic_memcpy_store_align16  atomic_memcpy_store_align2  atomic_memcpy_store_align4  atomic_memcpy_store_align8  atomic_u16_load  atomic_u8_load
tests/asm-test/asm/armv7-unknown-linux-gnueabihf/: atomic_memcpy_load_align1  atomic_memcpy_load_align16  atomic_memcpy_load_align2  atomic_memcpy_load_align4  atomic_memcpy_load_align8  atomic_memcpy_store_align1  atomic_memcpy_store_align16  atomic_memcpy_store_align2  atomic_memcpy_store_align4  atomic_memcpy_store_align8  atomic_u16_load  atomic_u32_load  atomic_u64_load
tests/asm-test/asm/i586-unknown-linux-gnu/: atomic_memcpy_load_align1  atomic_memcpy_load_align16  atomic_memcpy_load_align2  atomic_memcpy_load_align4  atomic_memcpy_load_align8  atomic_memcpy_store_align1  atomic_memcpy_store_align16  atomic_memcpy_store_align2  atomic_memcpy_store_align4  atomic_memcpy_store_align8  atomic_u16_load  atomic_u32_load  atomic_u64_load  atomic_u8_load
tests/asm-test/asm/i686-unknown-linux-gnu/: atomic_memcpy_load_align1  atomic_memcpy_load_align16  atomic_memcpy_load_align2  atomic_memcpy_load_align4  atomic_memcpy_load_align8  atomic_memcpy_store_align1  atomic_memcpy_store_align16  atomic_memcpy_store_align2  atomic_memcpy_store_align4  atomic_memcpy_store_align8  atomic_u16_load  atomic_u32_load  atomic_u64_load  atomic_u8_load
tests/asm-test/asm/mips-unknown-linux-gnu/: atomic_memcpy_load_align1  atomic_memcpy_load_align16  atomic_memcpy_load_align2  atomic_memcpy_load_align4  atomic_memcpy_load_align8  atomic_memcpy_store_align1  atomic_memcpy_store_align16  atomic_memcpy_store_align2  atomic_memcpy_store_align4  atomic_memcpy_store_align8  atomic_u16_load  atomic_u32_load  atomic_u8_load
tests/asm-test/asm/mips64-unknown-linux-gnuabi64/: atomic_memcpy_load_align1  atomic_memcpy_load_align16  atomic_memcpy_load_align2  atomic_memcpy_load_align4  atomic_memcpy_load_align8  atomic_memcpy_store_align1  atomic_memcpy_store_align16  atomic_memcpy_store_align2  atomic_memcpy_store_align4  (+4 more)
tests/asm-test/src/: lib.rs  main.rs
tests/asm-test/tests/: test.rs
(+184 files in other folders)
