[package]
name = "atomic-memcpy"
version = "0.1.3"
edition = "2018"
rust-version = "1.36"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/atomic-memcpy"
keywords = ["atomic"]
categories = ["concurrency", "no-std"]
description = """
Byte-wise atomic memcpy.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
members = [
    "bench",
    "tests/asm-test",
    "tests/no-std",
]

[features]
# Use inline assembly.
#
# This allows copying of the type that contains uninitialized bytes.
inline-asm = []

# Use #[inline(always)] instead of #[inline].
#
# This is mainly used for asm test.
# Note that it is useless to enable this in most cases.
inline-always = []

[dependencies]
# # Unstable feature flag to test that this crate's functions don't become panic
# # *unless the user passes an invalid ordering*.
# #
# # Note: this will not work unless you build tests or binaries with release mode.
# no-panic = { version = "0.1.11", optional = true }

[dev-dependencies]
