[package]
name = "atomic-memcpy"
version = "0.2.1"
edition = "2018"
rust-version = "1.36"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/atomic-memcpy"
keywords = ["atomic"]
categories = ["concurrency", "no-std"]
description = """
Byte-wise atomic memcpy.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
members = [
    "bench",
    "tests/asm-test",
    "tests/no-std",
]

[lib]
doc-scrape-examples = false

[features]
# Unstable feature flag to use #[inline(always)] instead of #[inline].
#
# This is mainly used for asm test.
# Note that it is useless to enable this in most cases.
inline-always = []

[target.'cfg(target_os = "none")'.dependencies]
portable-atomic = { version = "1", default-features = false }

[dev-dependencies]
