[package]
name = "bench"
edition = "2018"

[dependencies]
atomic-memcpy = { path = "..", features = ["inline-always"] }

[dev-dependencies]
criterion = { default-features = false, git = "https://github.com/taiki-e/criterion.rs.git", branch = "dev" } # reduce deps

[[bench]]
name = "atomic_memcpy"
harness = false

[lints]
workspace = true
