[package]
name = "bench"
edition = "2018"

[dependencies]
atomic-memcpy = { path = "..", features = ["inline-always"] }

[dev-dependencies]
criterion = { default-features = false, git = "https://github.com/taiki-e/criterion.rs.git", rev = "8617cd7" } # reduce deps

[[bench]]
name = "bench"
path = "bench.rs"
harness = false

[lints]
workspace = true
