[package]
name = "asm-test"
edition = "2018"

[lib]
doctest = false
doc = false

[features]
default = ["duct", "fs-err", "indexmap", "lexopt", "rustc-demangle", "syn"]

[dependencies]
atomic-memcpy = { path = "../..", features = ["inline-always"] }

duct = { version = "1.0", optional = true }
fs-err = { version = "3", optional = true }
indexmap = { version = "2", optional = true }
lexopt = { version = "0.3", optional = true }
rustc-demangle = { version = "0.1", optional = true }
syn = { version = "2", optional = true, default-features = false, features = ["parsing", "full"] }

[lints]
workspace = true
